--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,13 +10,25 @@
   <body>
     <nav>
         <a href="{{ url_for('all_surveys') }}">All Surveys</a>
+        {% if session.get('loggedin') %}
+          <a href="{{ url_for('create_survey') }}">Create Survey</a>
+          <a href="{{ url_for('logout') }}">Logout</a>
+        {% else %}
+          <a href="{{ url_for('login') }}">Login</a>
+        {% endif %}
     </nav>
     <div class="container">
-        {% block tralialia%}
-        {%endblock%}
-
-    {% block content %}
-    {% endblock %}
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+      <ul class="flashes">
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+        {% block content %}
+        {% endblock %}
+      {% endwith %}
     </div>
   </body>
 </html>
